Revamp documentation to introduce SpecKit methodology and spec-driven development workflow. Expanded README with quickstart guide, key concepts, and contribution guidelines. Updated project structure, navigation, and Mintlify configuration.

--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -71,12 +71,10 @@ docs/
 │   ├── markdown.mdx
 │   ├── code.mdx
 │   └── images.mdx
-└── api-reference/
-    ├── introduction.mdx
-    └── endpoint/
-        ├── get.mdx
-        ├── create.mdx
-        └── delete.mdx
+└── workflows/
+    ├── specify-command.mdx
+    ├── plan-command.mdx
+    └── tasks-command.mdx
 ```
 
 ### Page Metadata
@@ -97,12 +95,12 @@ Create tabbed navigation for different sections:
 ```json
 "tabs": [
   {
-    "name": "API Reference",
-    "url": "api-reference"
+    "name": "Templates",
+    "url": "templates"
   },
   {
-    "name": "SDKs",
-    "url": "sdks"
+    "name": "Examples",
+    "url": "examples"
   }
 ]
 ```
