--- a/essentials/settings.mdx
+++ b/essentials/settings.mdx
@@ -68,16 +68,18 @@ Configure your site navigation structure:
 ```json
 "navigation": [
   {
-    "group": "Get Started",
+    "group": "Getting Started",
     "pages": [
       "introduction",
-      "quickstart"
+      "getting-started/installation"
     ]
   },
   {
-    "group": "API Reference",
+    "group": "Workflows",
     "pages": [
-      "api-reference/introduction"
+      "workflows/specify-command",
+      "workflows/plan-command",
+      "workflows/tasks-command"
     ]
   }
 ]
