--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,66 +1,83 @@
 ---
-title: Introduction
-description: 'Welcome to the Speckit documentation'
+title: "Spec-Driven Development"
+description: "Discover SpecKit's revolutionary approach to spec-driven development. Learn how SpecKit eliminates the gap between documentation and implementation."
+tags: ["SpecKit", "introduction", "spec-driven-development"]
+seoKeywords: ["SpecKit documentation", "SpecKit introduction", "spec driven development", "github SpecKit"]
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+## What is Spec-Driven Development?
+Spec-Driven Development (SDD) flips the script on traditional software development. For decades, code has been king — specifications were just scaffolding we built and discarded once the "real work" of coding began. Spec-Driven Development changes this: specifications become executable, directly generating working implementations rather than just guiding them.
 
-## Welcome to Speckit
+### Beyond the Surface: SpecKit vs. Kiro
 
-Speckit is a powerful platform designed to streamline your development workflow and enhance productivity. This documentation will guide you through all the features and capabilities that Speckit has to offer.
+Is **SpecKit** GitHub's reaction to Amazon's Kiro? At first impression, it might seem that way. Kiro introduced a spec mode several months ago, and GitHub's **SpecKit** is deeply spec-driven. They look remarkably similar, but **SpecKit** isn't simply a reactive response.
+
+### The Bigger Vision
+
+GitHub's **SpecKit** is tackling a more fundamental challenge in software development. It has a much bigger ambition and vision: **to eliminate the gap between documentation and implementation**.
+
+<Note>
+**The Transformation Goal**: From documentation to implementation becomes a seamless transformation—ideally requiring no human intervention.
+</Note>
+
+This **SpecKit** documentation will guide you through this transformative methodology, showing how **spec-driven development** can revolutionize your workflow and bridge the eternal divide between what we document and what we actually build.
+
+### What Makes SpecKit Different
+
+Unlike traditional development approaches, **SpecKit's** methodology treats specifications as executable, living documents. This **SpecKit** framework enables:
+
+- **Automated Implementation**: Specifications that can generate working code
+- **Living Documentation**: Docs that stay synchronized with implementation
+- **Constitutional Governance**: Built-in quality and consistency enforcement
+- **Seamless Workflows**: From `/specify` to `/plan` to `/tasks` execution
 
 <CardGroup cols={2}>
   <Card
-    title="Quick Start"
+    title="Spec-Driven Quick Start"
     icon="rocket"
     href="/quickstart"
   >
-    Get up and running with Speckit in minutes
+    Get up and running with SpecKit methodology in minutes
   </Card>
   <Card
-    title="API Reference"
-    icon="code"
-    href="/api-reference"
+    title="Methodology Guide"
+    icon="book-open"
+    href="/methodology"
   >
-    Explore our comprehensive API documentation
+    Master the core principles of spec-driven development
   </Card>
   <Card
-    title="Examples"
+    title="Live Examples"
     icon="lightbulb"
-    href="/essentials/code"
+    href="/examples"
   >
-    Learn from practical examples and use cases
+    See SpecKit transformations in action with real projects
   </Card>
   <Card
-    title="Support"
-    icon="life-ring"
-    href="mailto:support@speckit.dev"
+    title="Community Support"
+    icon="users"
+    href="https://github.com/github/spec-kit/issues"
   >
-    Get help from our support team
+    Join the SpecKit community and get help
   </Card>
 </CardGroup>
 
 ## What's Next?
 
 <AccordionGroup>
-  <Accordion title="Getting Started">
-    Follow our [quickstart guide](/quickstart) to set up your first project with Speckit.
+  <Accordion title="Start Your Spec-Driven Journey">
+    Follow our [SpecKit quickstart guide](/quickstart) to create your first executable specification and experience the transformation from documentation to implementation.
   </Accordion>
 
-  <Accordion title="Explore Features">
-    Dive deep into Speckit's features by exploring our [essentials](/essentials/markdown) section.
+  <Accordion title="Master the Methodology">
+    Dive deep into [spec-driven development principles](/methodology) and learn how **SpecKit** eliminates the documentation-implementation gap.
   </Accordion>
 
-  <Accordion title="API Integration">
-    Learn how to integrate with our API through our comprehensive [API reference](/api-reference).
+  <Accordion title="See Real Transformations">
+    Explore [live examples](/examples) of **SpecKit** in action, from simple specifications to fully automated implementations.
+  </Accordion>
+
+  <Accordion title="Advanced Workflows">
+    Discover [extensions and automation](/extensions) that enhance your **SpecKit** workflow with CI/CD, visualization, and specification by example.
   </Accordion>
 </AccordionGroup>
